src/test/ui/consts/min_const_fn/allow_const_fn_ptr_feature_gate.stderr
error: stable const functions must have either `rustc_const_stable` or `rustc_const_unstable` attribute
  --> $DIR/allow_const_fn_ptr_feature_gate.rs:4:1
   |
LL | const fn error(_: fn()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: stable const functions must have either `rustc_const_stable` or `rustc_const_unstable` attribute
  --> $DIR/allow_const_fn_ptr_feature_gate.rs:4:1
   |
LL | const fn error(_: fn()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^

error[E0658]: function pointers cannot appear in constant functions
  --> $DIR/allow_const_fn_ptr_feature_gate.rs:4:16
   |
LL | const fn error(_: fn()) {}
   |                ^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_fn_ptr_basics)]` to the crate attributes to enable

error[E0658]: function pointers cannot appear in constant functions
  --> $DIR/allow_const_fn_ptr_feature_gate.rs:11:19
   |
LL | const fn compiles(_: fn()) {}
   |                   ^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_fn_ptr_basics)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
